# persona-browser-agent

./: .gitignore  .sudd-version  AGENTS.md  INTEGRATION.md  README.md  config.yaml  integration_review.md  pyproject.toml
docs/: architecture-proposal-v2.md  architecture-proposal-v3.md  consumer-rubric-format.md  pb-fixes-from-cross-review.md  phase-0-feasibility-and-risk-mitigations.md  sudd_feedback.md
examples/: .env  micro-persona-dashboard.md  micro-persona-signup-form.md  persona-ecommerce-shopper.md
fixtures/: sample_codeintel.json  sample_final_report.json  sample_manifest.json  sample_navigator_output.json  sample_network_verifier_output.json  sample_rubric.md  sample_scorer_results.json
persona_browser/: __init__.py  agent.py  cli.py  codeintel_filter.py  config.py  har_parser.py  llm.py  network_verifier.py  output_parser.py  pipeline.py  prompts.py  report.py  score_reconciler.py  scorer_runner.py  text_scorer.py  visual_scorer.py
poc/: FINDINGS.md  README.md  poc1_navigator_output.py  poc2_network_capture.py
rubrics/: cro-rubric-template.md  pb-feature-rubric.md
schemas/: codeintel.schema.json  final-report.schema.json  manifest.schema.json  navigator-output.schema.json  network-log-entry.schema.json  network-verifier-output.schema.json  text-scorer-output.schema.json  visual-scorer-output.schema.json
sudd/: alignment-report.md  standards.md  sync.sh
tests/: test_codeintel_filter.py  test_config.py  test_har_parser.py  test_integration.py  test_network_verifier.py  test_output_parser.py  test_pipeline.py  test_prompts.py  test_scorer_runner.py  (+3 more)
(+169 files in other folders)
